@@ -32,6 +32,7 @@ import org.openjdk.jmh.annotations.Fork;
 import org.openjdk.jmh.annotations.Measurement;
 import org.openjdk.jmh.annotations.Mode;
 import org.openjdk.jmh.annotations.OutputTimeUnit;
+import org.openjdk.jmh.annotations.Param;
 import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.TearDown;
@@ -51,7 +52,7 @@ import static jdk.incubator.foreign.MemoryLayouts.JAVA_INT;
 @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @State(org.openjdk.jmh.annotations.Scope.Thread)
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
-@Fork(3)
+@Fork(value = 3, jvmArgsAppend = { "--add-modules=jdk.incubator.foreign" })
 public class LoopOverNonConstantHeap {
 
     static final Unsafe unsafe = Utils.unsafe;
@@ -67,8 +68,27 @@ public class LoopOverNonConstantHeap {
 
     ByteBuffer byteBuffer;
 
+    @Param(value = {"false", "true"})
+    boolean polluteProfile;
+
     @Setup
     public void setup() {
+        if (polluteProfile) {
+            MemorySegment intB = MemorySegment.ofArray(new byte[ALLOC_SIZE]);
+            MemorySegment intI = MemorySegment.ofArray(new int[ALLOC_SIZE]);
+            MemorySegment intD = MemorySegment.ofArray(new double[ALLOC_SIZE]);
+            MemorySegment intF = MemorySegment.ofArray(new float[ALLOC_SIZE]);
+            try (MemorySegment s = MemorySegment.allocateNative(ALLOC_SIZE)) {
+                for (int i = 0; i < ALLOC_SIZE; i++) {
+                    MemoryAccess.setByteAtOffset(intB, i, (byte)i);
+                    MemoryAccess.setIntAtIndex(intI, i, i);
+                    MemoryAccess.setDoubleAtIndex(intD, i, i);
+                    MemoryAccess.setFloatAtIndex(intF, i, i);
+                    MemoryAccess.setByteAtOffset(s, i, (byte) i);
+                }
+            }
+        }
+
         base = new byte[ALLOC_SIZE];
         for (int i = 0; i < ELEM_SIZE; i++) {
             unsafe.putInt(base, UNSAFE_BYTE_BASE + (i * CARRIER_SIZE) , i);
